--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,19 +3,27 @@ name = "minesweeper-tutorial"
 version = "0.1.0"
 authors = ["Felix de Maneville <felix.maneville@gmail.com>"]
 edition = "2018"
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+resolver = "2"
 
 [features]
 default = []
 debug = ["board_plugin/debug", "bevy-inspector-egui"]
 
 [dependencies]
-bevy = { version = "0.5", features = ["dynamic"] }
 board_plugin = { path = "board_plugin" }
 
 # Hierarchy inspector debug
 bevy-inspector-egui = { version = "0.5", optional = true }
+
+# Dependencies for native only.
+[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
+bevy = { version = "0.5", default-features = false, features = ["bevy_winit", "png", "x11", "bevy_wgpu"] }
+
+# Dependencies for WASM only.
+[target.'cfg(target_arch = "wasm32")'.dependencies]
+bevy = { version = "0.5", default-features = false, features = ["bevy_winit", "png"] }
+bevy_webgl2 = "0.5"
+getrandom = { version="0.2", features=["js"] }
 
 [workspace]
 members = [
