--- a/board_plugin/Cargo.toml
+++ b/board_plugin/Cargo.toml
@@ -12,11 +12,10 @@ debug = ["colored", "bevy-inspector-egui"]
 
 [dependencies]
 # Engine
-bevy = "0.5"
+bevy = { version = "0.5", default-features = false, features = ["bevy_winit", "render"] }
 
 # Serialization
 serde = "1.0"
-serde_yaml = "0.8"
 
 # Random
 rand = "0.8"
