--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,7 +17,7 @@ bevy-inspector-egui = { version = "0.5", optional = true }
 
 # Dependencies for native only.
 [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
-bevy = { version = "0.5", default-features = false, features = ["bevy_winit", "png", "x11", "bevy_wgpu"] }
+bevy = { version = "0.5", default-features = false, features = ["dynamic", "bevy_winit", "png", "x11", "bevy_wgpu"] }
 
 # Dependencies for WASM only.
 [target.'cfg(target_arch = "wasm32")'.dependencies]
