--- a/board_plugin/Cargo.toml
+++ b/board_plugin/Cargo.toml
@@ -12,7 +12,7 @@ debug = ["colored", "bevy-inspector-egui"]
 
 [dependencies]
 # Engine
-bevy = { version = "0.5", default-features = false, features = ["bevy_winit", "render"] }
+bevy = { version = "0.5", default-features = false, features = ["render"] }
 
 # Serialization
 serde = "1.0"
