--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,17 +13,21 @@ debug = ["board_plugin/debug", "bevy-inspector-egui"]
 board_plugin = { path = "board_plugin" }
 
 # Hierarchy inspector debug
-bevy-inspector-egui = { version = "0.5", optional = true }
+
+[dependencies.bevy-inspector-egui]
+version = "0.8"
+optional = true
+
+[dependencies.bevy]
+version = "0.6"
+default-features = false
+features = ["render", "bevy_winit", "png"]
 
 # Dependencies for native only.
-[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
-bevy = { version = "0.5", default-features = false, features = ["dynamic", "bevy_winit", "png", "x11", "bevy_wgpu"] }
-
-# Dependencies for WASM only.
-[target.'cfg(target_arch = "wasm32")'.dependencies]
-bevy = { version = "0.5", default-features = false, features = ["bevy_winit", "png"] }
-bevy_webgl2 = "0.5"
-getrandom = { version="0.2", features=["js"] }
+[target.'cfg(not(target_arch = "wasm32"))'.dependencies.bevy]
+version = "0.6"
+default-features = false
+features = ["x11"]
 
 [workspace]
 members = [
