--- a/board_plugin/Cargo.toml
+++ b/board_plugin/Cargo.toml
@@ -11,8 +11,6 @@ default = []
 debug = ["colored", "bevy-inspector-egui"]
 
 [dependencies]
-# Engine
-bevy = { version = "0.5", default-features = false, features = ["render"] }
 
 # Serialization
 serde = "1.0"
@@ -21,7 +19,23 @@ serde = "1.0"
 rand = "0.8"
 
 # Console Debug
-colored = { version = "2.0", optional = true }
+[dependencies.colored]
+version = "2.0"
+optional = true
+
 # Hierarchy inspector debug
-bevy-inspector-egui = { version = "0.5", optional = true }
+[dependencies.bevy-inspector-egui]
+version = "0.8"
+optional = true
+
+# Engine
+[dependencies.bevy]
+version = "0.6"
+default-features = false
+features = ["render"]
+
+# Dependencies for WASM only
+[target.'cfg(target_arch = "wasm32")'.dependencies.getrandom]
+version="0.2"
+features=["js"]
 
