--- a/Cargo.toml
+++ b/Cargo.toml
@@ -41,3 +41,7 @@ opt-level = 3
 # Maybe also enable only a small amount of optimization for our code:
 [profile.dev]
 opt-level = 1
+
+[profile.release]
+strip = "debuginfo"
+lto = "thin"
