--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,10 +1,11 @@
 [package]
-name = "minesweeper-tutorial"
+name = "bevy_minesweeper"
 version = "0.1.0"
 authors = ["Felix de Maneville <felix.maneville@gmail.com>"]
-edition = "2018"
-resolver = "2"
+edition = "2021"
 
+
+# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 [features]
 default = []
 debug = ["board_plugin/debug", "bevy-inspector-egui"]
@@ -13,26 +14,26 @@ debug = ["board_plugin/debug", "bevy-inspector-egui"]
 board_plugin = { path = "board_plugin" }
 
 # Hierarchy inspector debug
-
 [dependencies.bevy-inspector-egui]
-version = "0.8"
+version = "0.9"
 optional = true
-
+# Engine
 [dependencies.bevy]
 version = "0.6"
 default-features = false
 features = ["render", "bevy_winit", "png"]
 
 # Dependencies for native only.
-[target.'cfg(not(target_arch = "wasm32"))'.dependencies.bevy]
-version = "0.6"
-default-features = false
-features = ["x11"]
+#[target.'cfg(not(target_arch = "wasm32"))'.dependencies.bevy]
+#version = "0.6"
+#default-features = false
+#features = ["x11"]
 
 [workspace]
 members = [
     "board_plugin"
 ]
+resolver = "2"
 
 # Enable optimizations for dependencies (incl. Bevy), but not for our code:
 [profile.dev.package."*"]
